Quebra descrição em 79 caracteres

--- a/models/sources/sisab.yml
+++ b/models/sources/sisab.yml
@@ -19,4 +19,6 @@ sources:
       - name: sisab_producao_municipios_por_tipo_equipe_por_tipo_producao
         identifier: sisab_producao_municipios_por_tipo_equipe_por_tipo_producao
         description: >
-          Relatório de produção do Sistema de Informações em Saúde para a Atenção Básica que relaciona os tipos de equipe ao tipo (e ao tamanho) da produção realizada mensalmente em cada município.
+          Relatório de produção do Sistema de Informações em Saúde para a Atenção Básica 
+          que relaciona os tipos de equipe ao tipo (e ao tamanho) da produção realizada 
+          mensalmente em cada município.
