Adições simples e correção de bugs (#13)
* Concede acesso para saude_mental_analistas

* Corrige bug

* Adiciona tabela com dados do Sisab como fonte

* Adiciona tabelas de códigos como fonte

* Concede acesso para 'saude_mental_integracao'

* Quebra descrição em 79 caracteres

--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo.yml
@@ -14,6 +14,8 @@ models:
       (BPA-i), enviado ao Sistema de Informações Ambulatoriais do SUS (SIASUS)
       e disponibilizado pelo Departamento de Informática do SUS (DATASUS).
     config:
+      grants:
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: referencias_atendimentos_resumo
       enabled: true
       # indexes:
