--- a/models/ambulatorio_saude_mental/ambulatorio_usuarios_perfil.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_usuarios_perfil.yml
@@ -13,6 +13,8 @@ models:
       conforme registrado em Boletins de Produção Ambulatorial individualizados
       (BPA-i) enviados ao Sistema de Informações Ambulatoriais do SUS (SIASUS).
     config:
+      grants:
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: referencias_usuarios_perfil
       enabled: true
       indexes:
