--- a/models/caps/usuarios_ativos/caps_procedimentos_individualizaveis.yml
+++ b/models/caps/usuarios_ativos/caps_procedimentos_individualizaveis.yml
@@ -16,6 +16,8 @@ models:
       disponibilizado pelo Departamento de Informática do SUS (DATASUS) em seu
       FTP público.
     config:
+      grants:
+        select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: _caps_procedimentos_individualizaveis
       enabled: true
       indexes:
