Calcula subtotal e acrescenta datas legiveis

--- a/models/consultorio_na_rua/consultorio_na_rua_atendimentos_ultimos_12meses.yml
+++ b/models/consultorio_na_rua/consultorio_na_rua_atendimentos_ultimos_12meses.yml
@@ -24,6 +24,10 @@ models:
         - columns:
           - "a_partir_de"
           - "ate"
+          - "a_partir_do_mes"
+          - "ate_mes"
+          - "a_partir_do_ano"
+          - "ate_ano"
         - columns:
           - "tipo_producao"
         - columns:
