chore(internacoes): :wrench: Adiciona  como escopo de commits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "conventionalCommits.scopes": [
         "caps",
         "referencias",
-        "docs"
+        "docs",
+        "internacoes"
     ]
 }
