--- a/seeds/properties.yml
+++ b/seeds/properties.yml
@@ -60,6 +60,30 @@ seeds:
           Código do estabelecimento com atendimento de referência ambulatorial
           em saúde mental, segundo o SCNES.
 
+
+  - name: internacoes_desfechos_grupos
+    description: >
+      Lista agrupamentos de desfechos para internações hospitalares.
+    docs:
+      show: true
+    persist_docs:
+      relation: true
+      columns: true
+    config:
+      quote_columns: true
+      column_types:
+        desfecho_id_sihsus: "bpchar(2)"
+        desfecho_id_sihsus: "text"
+    columns:
+    - name: "desfecho_id_sihsus"
+      description: >
+        Identificador do desfecho no SIHSUS.
+    - name: "desfecho_grupo_descricao"
+      description: >
+        Descrição do grupo de desfechos. Assume um dos valores `'Permanencia'`, `'Transferência'`, `'Alta'`,
+        `'Encerramento administrativo'` ou `'Óbito'`. 
+
+
   - name: intervalos_tempo_servico
     description: >
       Lista categorias para classificar a duração do vínculo entre uma pessoa e
@@ -99,3 +123,61 @@ seeds:
         Valor sem significado intrínseco, mas que pode ser utilizado para
         ordenar as categorias de duração do vínculo, levando em conta os
         intervalos mínimo e máximo que as definem.
+
+  - name: internacoes_duracoes
+    description: >
+      Lista categorias para classificar a duração de internações ou estadias em
+      salas de estabilização.
+    docs:
+      show: true
+    persist_docs:
+      relation: true
+      columns: true
+    config:
+      quote_columns: true
+      column_types:
+        id: "uuid"
+        minimo: "interval"
+        maximo: "interval"
+        descricao: "text"
+        ordem: "numeric"
+    columns:
+    - name: "id"
+      description: >
+        Identificador único da categoria de duração da internação.
+    - name: "minimo"
+      description: >
+        Duração mínima da internação considerada para enquadramento dentro da
+        categoria (*intervalo fechado*).
+    - name: "maximo"
+      description: >
+        Duração a partir da qual a internação deixa de ser enquadrado dentro
+        da categoria (*intervalo aberto*).
+    - name: "descricao"
+      description: >
+        Descrição legível da categoria de duração da internação.
+    - name: "ordem"
+      description: >
+        Valor sem significado intrínseco, mas que pode ser utilizado para
+        ordenar as categorias de duração da internação, levando em conta os
+        intervalos mínimo e máximo que as definem.
+
+
+  - name: procedimentos_urgencia
+    description: >
+      Lista os procedimentos de saúde que devem ser considerados como
+      atendimentos de urgência.
+    docs:
+      show: true
+    persist_docs:
+      relation: true
+      columns: true
+    config:
+      quote_columns: true
+      column_types:
+        procedimento_id_sigtap: "bpchar(10)"
+    columns:
+    - name: "procedimento_id_sigtap"
+      description: >
+        Identificador do procedimento no Sistema de Gerenciamento da Tabela de
+        Procedimentos, Medicamentos e OPM do SUS.
