--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,8 @@ repos:
   rev: v1.0.0
   hooks:
     - id: reuse
+- repo: https://github.com/sqlfluff/sqlfluff
+  rev: 1.4.5
+  hooks:
+    - id: sqlfluff-fix
+    - id: sqlfluff-lint
