ci: :construction_worker: Renomeia fluxos, reativa e simplifica ações

--- a/.github/workflows/publicar.yml
+++ b/.github/workflows/publicar.yml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: MIT
 
 
-name: Cria imagem Docker - ImpulsoETL
+name: Cria imagem Docker - saude-mental-indicadores
 
 on:
   push:
