--- a/.github/workflows/rodar.yml
+++ b/.github/workflows/rodar.yml
@@ -3,12 +3,12 @@
 # SPDX-License-Identifier: MIT
 
 
-name: Seed, Run, Check, Test and Docs
+name: Documenta e constroi modelos alterados
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Cria imagem Docker - saude-mental-indicadores"]
+    types: [completed]
 
 jobs:
   build:
@@ -26,11 +26,11 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
 
-#      - name: Baixar arquivo manifest do último disparo bem-sucedido
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: manifest
-#          path: ./target/backup_manifest.json
+     - name: Baixar arquivo manifest do último disparo bem-sucedido
+       uses: actions/download-artifact@v3
+       with:
+         name: manifest
+         path: ./target/backup_manifest.json
 
       - name: Docker login
         env:
@@ -71,73 +71,22 @@ jobs:
           impulsogov/saude-mental-indicadores:latest dbt run-operation
           criar_udfs
 
-#      - name: Restituir arquivo manifest (1)
-#        shell: bash
-#        run: |
-#          cp ./target/backup_manifest.json ./target/manifest.json
+     - name: Restituir arquivo manifest
+       shell: bash
+       run: |
+         cp ./target/backup_manifest.json ./target/manifest.json
 
-      - name: seed
-        run: >
-          docker run
-          -e DBT_ENV_SECRET_ANALITICO_USUARIO
-          -e DBT_ENV_SECRET_ANALITICO_SENHA
-          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
-          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
-          -e DBT_ENV_SECRET_PRODUCAO_SENHA
-          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
-          impulsogov/saude-mental-indicadores:latest dbt seed
-#          --select state:modified+ --full-refresh
-
-#      - name: Restituir arquivo manifest (2)
-#        shell: bash
-#        run: |
-#          cp ./target/backup_manifest.json ./target/manifest.json
-
-      - name: dbt compile
-        run: >
-          docker run
-          -e DBT_ENV_SECRET_ANALITICO_USUARIO
-          -e DBT_ENV_SECRET_ANALITICO_SENHA
-          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
-          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
-          -e DBT_ENV_SECRET_PRODUCAO_SENHA
-          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
-          impulsogov/saude-mental-indicadores:latest dbt compile
-#          --select state:modified+
-
-#      - name: Restituir arquivo manifest (3)
-#        shell: bash
-#        run: |
-#          cp ./target/backup_manifest.json ./target/manifest.json
-
-#      - name: dbt run
-#        run: >
-#          docker run
-#          -e DBT_ENV_SECRET_ANALITICO_USUARIO
-#          -e DBT_ENV_SECRET_ANALITICO_SENHA
-#          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
-#          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
-#          -e DBT_ENV_SECRET_PRODUCAO_SENHA
-#          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
-#          impulsogov/saude-mental-indicadores:latest dbt run
-#          --select state:modified+ --full-refresh
-
-#      - name: Restituir arquivo manifest (4)
-#        shell: bash
-#        run: |
-#          cp ./target/backup_manifest.json ./target/manifest.json
-
-#      - name: test
-#        run: >
-#          docker run
-#          -e DBT_ENV_SECRET_ANALITICO_USUARIO
-#          -e DBT_ENV_SECRET_ANALITICO_SENHA
-#          -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
-#          -e DBT_ENV_SECRET_PRODUCAO_USUARIO
-#          -e DBT_ENV_SECRET_PRODUCAO_SENHA
-#          -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
-#          impulsogov/saude-mental-indicadores:latest dbt test
-#          --select state:modified+
+     - name: dbt build
+       run: >
+         docker run
+         -e DBT_ENV_SECRET_ANALITICO_USUARIO
+         -e DBT_ENV_SECRET_ANALITICO_SENHA
+         -e DBT_ENV_SECRET_ANALITICO_SERVIDOR
+         -e DBT_ENV_SECRET_PRODUCAO_USUARIO
+         -e DBT_ENV_SECRET_PRODUCAO_SENHA
+         -e DBT_ENV_SECRET_PRODUCAO_SERVIDOR
+         impulsogov/saude-mental-indicadores:latest dbt build
+         --select state:modified+ --full-refresh
 
       - name: Gravar arquivo manifest da execução bem-sucedida
         uses: actions/upload-artifact@v3
