fix: :rewind: Reverte mudança de nome do fluxo

--- a/.github/workflows/rodar.yml
+++ b/.github/workflows/rodar.yml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: MIT
 
 
-name: Documenta e constroi modelos alterados
+name: Seed, Run, Check, Test and Docs
 
 on:
   workflow_run:
