chore(adesao): :wrench: Adiciona escopo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "caps",
         "referencias",
         "docs",
-        "internacoes"
+        "internacoes",
+        "adesao"
     ]
 }
