--- a/models/caps/usuarios_ativos/caps_usuarios_vinculos.yml
+++ b/models/caps/usuarios_ativos/caps_usuarios_vinculos.yml
@@ -6,11 +6,13 @@
 version: 2
 
 models:
-  - name: _caps_usuarios_perfil_ambulatorial
+  - name: caps_usuarios_vinculos
     description: >
-      Elenca os usuários de Centros de Atenção Psicossocial que, até o 3º mês
-      após o primeiro procedimento realizado (exceto o acolhimento inicial),
-      realizaram apenas procedimentos considerados como de perfil ambulatorial.
+      Lista os usuários que já tiveram algum procedimento registrado em Centros
+      de Atenção Psicossociais (identificados por uma chave criptografada
+      derivada do Cartão Nacional de Saúde), relacionando-os à data em que
+      realizaram o seu primeiro acolhimento inicial e à data em que realizaram
+      pela primeira vez algum outro procedimento naquele CAPS.
       
       Os valores tem como base os dados enviados mensalmente ao Sistema
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
@@ -18,7 +20,7 @@ models:
     config:
       grants:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
-      alias: _caps_usuarios_perfil_ambulatorial
+      alias: _caps_usuarios_vinculos
       enabled: true
       indexes:
         - columns:
@@ -27,7 +29,7 @@ models:
         - columns:
           - "estabelecimento_id_scnes"
           - "usuario_id_cns_criptografado"
-      materialized: incremental
+      materialized: table
       persist_docs:
         relation: true
       tags:
@@ -35,6 +37,4 @@ models:
         - "caps"
         - "bpa_i"
         - "raas"
-        - "incremental"
-        - "adesao"
       unique_key: "id"
